--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,18 +21,12 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     container: smartcatcom/serge:latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    env:
+      ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
+      API_TOKEN: ${{ secrets.API_TOKEN }}
+      PROJECT_ID: ${{ secrets.PROJECT_ID }}
+    
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Pull repository
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          ./run-in-docker serge pull --initialize stereotech.org.serge
