--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
       PROJECT_ID: ${{ secrets.PROJECT_ID }}
     
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+    
       - name: Pull repository
         run: |
           ./run-in-docker serge pull --initialize stereotech.org.serge
