--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    container: smartcatcom/serge:latest
+    
     env:
       ACCOUNT_ID: ${{ secrets.ACCOUNT_ID }}
       API_TOKEN: ${{ secrets.API_TOKEN }}
@@ -32,4 +32,5 @@ jobs:
     
       - name: Pull repository
         run: |
+          docker pull smartcatcom/serge:latest
           ./run-in-docker serge pull --initialize stereotech.org.serge
