--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.4
     
+      - name: Get docker image
+        run: docker pull smartcatcom/serge:latest
       - name: Pull repository
-        run: |
-          docker pull smartcatcom/serge:latest
+        run: 
           ./run-in-docker serge pull --initialize stereotech.org.serge
+      - name: Push translation files to Smartcat
+        run: |
+          ./run-in-docker serge localize
+          ./run-in-docker serge push-ts
