--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,10 +24,10 @@ jobs:
         run: ./run-in-docker serge pull --initialize stereotech.org.serge
 
       - name: Pull localization
-        run: ./run-in-docker serge pull-ts
+        run: ./run-in-docker serge localize
         
       - name: Localize
-        run: ./run-in-docker serge localize
+        run: ./run-in-docker serge pull-ts localize
         
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3.8.2
