--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ on:
   pull_request:
     branches: [ master ]
   workflow_dispatch:
+  schedule:
+    - cron: 0 9 * * 1
+  
 jobs:
   buildTranslations:
     runs-on: ubuntu-latest
@@ -33,13 +36,17 @@ jobs:
       - name: Localize
         run: ./run-in-docker serge pull-ts localize
         
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%m-%d')"
+        
       - name: Create Pull Request
         uses: peter-evans/create-pull-request@v3.8.2
         with:
           token: ${{ secrets.PAT_TOKEN }}
           path: vcs/stereotech.org
           commit-message: '[Automated] Update translation'
-          branch: update/translations
+          branch: update/translations-${{ steps.date.outputs.date }}
           delete-branch: true
           title: '[Automated] Update translation'
           
